--- a/chat1/tema3.html
+++ b/chat1/tema3.html
@@ -85,7 +85,7 @@
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por [Nome da Equipe]</p>
+        <p>Desenvolvido por Daniel, Evellyn, Flaviane e Leydilaine. </p>
     </footer>
 </body>
 </html>
