--- a/chat1/tema3.html
+++ b/chat1/tema3.html
@@ -74,13 +74,13 @@
         </section>
         <section>
             <h2>Exemplo de Vídeo</h2>
-            <iframe width="500" height="300" src="https://www.youtube.com/watch?v=rpeBhcLsRHw&pp=ygUbY2hhdGJvdCBleHBsaWNhw6fDo28gcmFwaWRh" frameborder="0" allowfullscreen></iframe>
+            <iframe width="500" height="300" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/bXpBGUfQ7TU?si=3Yfq1WTDYJio5eOr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" frameborder="0" allowfullscreen></iframe>
         </section>
         <section>
             <h2>Links Relacionados</h2>
             <ul>
                 <li><a href="https://github.com/flaviane2/Chatbot">Repositório no GitHub</a></li>
-                <li><a href="outra_pagina.html">Outra Página Relacionada</a></li>
+                <li><a href="https://www.blip.ai/blog/chatbots/chatbot/">Outra Página Relacionada</a></li>
             </ul>
         </section>
     </main>
